# transformer_sandbox

./: README.md  main.py  pyproject.toml
pathogen_transformer/: genomic_dataloader.py  mac_architecture.py  model.py  trainer.py
pathogen_transformer/mac_test_outputs/2025-03-11_12-37-05/: best_model.pt  checkpoint_epoch_2.pt  config.json  training_history.json  val_classification_report_epoch_1.json
pathogen_transformer/test_data/: test_data.csv
regression_walkthroughs/: decision_tree_regression.py  multiple_linear_regression.py  polynomial_regression.py  random_forest_regression.py  simple_linear_regression.py  support_vector_regression.py
